--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>clone</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="foam.html">
 </head>
 <body>
   <div class="container">
@@ -25,7 +26,7 @@
 
         <a href="#" class="forgot">Forgotten password?</a>
         <hr>
-        <button class="new-account">Create new account</button>
+       <a href="./foam.html" target="_blank" class="new-account ">Create new account</a>
       </form>
     </div>
   </div>
