--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
         <input type="email" placeholder="Email address or phone number" class="main-email">
         <input type="password" placeholder="Password" class="main-password">
 
-        <button class="btn">Log in</button>
+        <!-- <button class="btn">Log in</button> -->
+        <a href="./dash.html" target="_blank " class="btn">Log in</a>
 
         <a href="#" class="forgot">Forgotten password?</a>
         <hr>
        <a href="./foam.html" target="_blank" class="new-account ">Create new account</a>
+
       </form>
     </div>
   </div>
